objects/Contract.object
<CustomObject>
    <fields>
        <fullName>IHSMarkitLegalEntityCountry__c</fullName>
        <description>SFDC1-905 IHS Markit Legal Entity: Country</description>
        <formula>IHSMarkitLegalEntity__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IHS Markit Legal Entity: Country/Territory</inlineHelpText>
        <label>IHSM Legal Entity: Country/Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityFullAddress__c</fullName>
        <description>SFDC-2541 : This field concatenates IHS Markit Legal Entity&apos;s Full address sans Street. This field will be used in Docgen Package.</description>
        <formula>IF(NOT(ISBLANK( IHSMarkitLegalEntityCity__c)), IHSMarkitLegalEntityCity__c &amp; &quot;, &quot;, &quot;&quot; ) &amp;
IF(NOT(ISBLANK(IHSMarkitLegalEntityStateProvinceNew__c)), IHSMarkitLegalEntityStateProvinceNew__c &amp; &quot;, &quot;, &quot;&quot; ) &amp;
IF(NOT(ISBLANK(IHSMarkitLegalEntityZipPostal_Code__c)), IHSMarkitLegalEntityZipPostal_Code__c &amp; &quot;, &quot;, &quot;&quot; ) &amp;
IF(NOT(ISBLANK(IHSMarkitLegalEntityCountry__c)), IHSMarkitLegalEntityCountry__c, &quot;&quot; )</formula>
        <inlineHelpText>IHS Markit Legal Entity&apos;s Full Adress</inlineHelpText>
        <label>IHS Markit Legal Entity Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityStateProvinceNew__c</fullName>
        <description>SFDC1-8096 State of IHS Markit Legal Entity</description>
        <inlineHelpText>State of IHS Markit Legal Entity</inlineHelpText>
        <label>IHS Markit Legal Entity: State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityStreet__c</fullName>
        <description>SFDC1-2405: IHS Markit Legal Entity: Street</description>
        <inlineHelpText>IHS Markit Legal Entity: Street</inlineHelpText>
        <label>IHS Markit Legal Entity: Street</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityZipPostal_Code__c</fullName>
        <description>SFDC1-905 IHS Markit Legal Entity: Zip/Postal Code
SFDC1-7807: Updated label to Postal/Zip Code</description>
        <formula>IHSMarkitLegalEntity__r.PostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IHS Markit Legal Entity: Postal/Zip Code</inlineHelpText>
        <label>IHS Markit Legal Entity:Postal/Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2405 IHS Markit Legal Entity</description>
        <inlineHelpText>IHS Markit Legal Entity</inlineHelpText>
        <label>IHS Markit Legal Entity</label>
        <referenceTo>LegalEntity__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>IHSMarkitLegalEntity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IHSMarkitNoticeAddressCity__c</fullName>
        <description>SFDC1-2405: IHS Markit Notice Address: City</description>
        <inlineHelpText>IHS Markit Notice Address: City</inlineHelpText>
        <label>IHS Markit Notice Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitNoticeAddressCountry__c</fullName>
        <description>SFDC1-2405: IHS Markit Notice Address: Country</description>
        <inlineHelpText>IHS Markit Notice Address: Country/Territory</inlineHelpText>
        <label>IHSM Notice Address: Country/Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitNoticeAddressStreet__c</fullName>
        <description>SFDC1-2405: IHS Markit Notice Address: Street</description>
        <inlineHelpText>IHS Markit Notice Address: Street</inlineHelpText>
        <label>IHS Markit Notice Address: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitNoticeState__c</fullName>
        <description>SFDC1-2405: IHS Markit Notice Address: State/Province</description>
        <inlineHelpText>IHS Markit Notice Address: State/Province</inlineHelpText>
        <label>IHS Markit Notice Address:State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitNoticeZipCode__c</fullName>
        <description>SFDC1-2405: IHS Markit Notice Address: Zip/Postal Code
SFDC1-7807: Updated label to Postal/Zip Code</description>
        <inlineHelpText>IHS Markit Notice Address: Postal/Zip Code</inlineHelpText>
        <label>IHS Markit Notice Address:Postal/ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitStateofIncorporation__c</fullName>
        <description>SFDC1-5203 This field populates from &quot;Incorporated in State&quot; field on associated Legal Entity object</description>
        <formula>TEXT(IHSMarkitLegalEntity__r.IncorporatedinState__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IHS Markit State of Incorporation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Increase__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of % Increase</description>
        <inlineHelpText>Enter % Increase</inlineHelpText>
        <label>% Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalBusinessSegment__c</fullName>
        <description>SFDC-2969 field to store comma separated values of Internal Business segment derived from contract line items</description>
        <inlineHelpText>Internal Business segments rolled up from contract line items into one single field</inlineHelpText>
        <label>Internal Business Segments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InternalInstructions__c</fullName>
        <description>SFDC1-718;Internal comment/instruction on a Contract
SFDC1-10168 Field type change</description>
        <label>Internal Billing Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceFormat__c</fullName>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>Invoice Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundled with details</fullName>
                </value>
                <value>
                    <fullName>Unbundled</fullName>
                    <default>true</default>
                    <label>Unbundled</label>
                </value>
                <value>
                    <fullName>Bundled without details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastContractStatusChangeDate__c</fullName>
        <description>SFDC-4891 Added field for reporting for Last contract status change date</description>
        <inlineHelpText>Dates are in the GMT time zone.</inlineHelpText>
        <label>Last Contract Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>Source System Name and Record ID</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-6328 : Legacy Contract identifier for migrated cases. First 3 letters identifies the source system</description>
        <externalId>true</externalId>
        <inlineHelpText>Populates from the legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyMarkitSAPID__c</fullName>
        <description>SFDC1-8279 This field stores the SAP ID for Legacy Markit contracts</description>
        <inlineHelpText>SAP ID for Legacy Markit contracts</inlineHelpText>
        <label>Legacy Markit SAP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of CRM system that this record has come from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegalEntityName__c</fullName>
        <description>SFDC1-718;This is a custom entity used in Products as well</description>
        <inlineHelpText>Please populate Legal Entity</inlineHelpText>
        <label>Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalLead__c</fullName>
        <formula>Opportunity__r.LegalLead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Legal Lead</inlineHelpText>
        <label>Legal Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseTerm__c</fullName>
        <description>SFDC-1818 : Create a new field on Order to track license term.</description>
        <inlineHelpText>This field indicates if the contract is Perpetual or Term</inlineHelpText>
        <label>License Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiveCMClients__c</fullName>
        <description>SFDC1-2455 CM Relationships</description>
        <label>Live CM Clients</label>
        <summaryFilterItems>
            <field>CMRelationship__c.AccountStatus__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </summaryFilterItems>
        <summaryForeignKey>CMRelationship__c.BrokerContract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MFNClause__c</fullName>
        <formula>Opportunity__r.MFNClause__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Select if there is a Most Favoured Nation (MFN) clause.</inlineHelpText>
        <label>MFN Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterAgreementExhibit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-865 - Order Form and Consulting type of contracts need a field to link the MA Exhibit contract</description>
        <inlineHelpText>Saves the details of the Master Agreement Exhibit Contract</inlineHelpText>
        <label>Master Agreement Exhibit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.RecordTypeName__c</field>
                <operation>equals</operation>
                <value>Master Agreement Exhibit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Order Form/Consulting</relationshipLabel>
        <relationshipName>contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasterDataAddendumEffectiveDate__c</fullName>
        <description>SFDC-4417- Since we do not have a contract record as a Master data Addendum, to keep a track of it every time it is signed we need the &apos;Master data addendum effective date&apos; field on the Master Agreement and Order Form/SOW contract record.</description>
        <inlineHelpText>The field needs to be populated for Legacy Markit</inlineHelpText>
        <label>Master Data Addendum Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MinimumEstimatedVariableRevenue__c</fullName>
        <formula>Opportunity__r.MinimumEstimatedVariableRevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If variable revenue is generated, please provide the estimated minimum.</inlineHelpText>
        <label>Minimum Estimated Variable Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelClauseAttached__c</fullName>
        <description>SFDC1-7506: Select the option to attach Model Clause</description>
        <inlineHelpText>Model Clause Attached?</inlineHelpText>
        <label>Model Clause Attached?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MultiyearOrderForm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6053 : Multiyear Order Form on Order From contracts</description>
        <inlineHelpText>Multiyear refers to contracts for 2 years and over</inlineHelpText>
        <label>Multiyear Order Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameProvidedUsageDetails__c</fullName>
        <description>SFDC1-9301: Provide the Usage Detail</description>
        <inlineHelpText>If Usage Reports Required = Yes , please provide the Usage Detail</inlineHelpText>
        <label>Name (provided usage details)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetIncrease__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Net Increase</description>
        <inlineHelpText>Enter Net Increase</inlineHelpText>
        <label>Net Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewAnnualRevenue__c</fullName>
        <description>SFDC1-9300:Price Increase Details section field creation</description>
        <inlineHelpText>New Annual Revenue</inlineHelpText>
        <label>New Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewExistingPartner__c</fullName>
        <description>SFDC-2548 Global Alliance</description>
        <formula>TEXT(Opportunity__r.NewExistingPartner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Select whether the opportunity is with a new or existing Alliance Partner.</inlineHelpText>
        <label>New/Existing Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewGovernmentContractName__c</fullName>
        <description>SFDC1-6073: Making this a formula field to fetch value from Opportunity field of the same name</description>
        <formula>Opportunity__r.GovernmentContractName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Government Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewGovernmentContractNumber__c</fullName>
        <description>SFDC1-6073: Getting the value from Opportunity field of the same name</description>
        <formula>Opportunity__r.GovernmentContractNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Government Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoInternalApprovalNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6282</description>
        <label>No Internal Approval Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NonCompete__c</fullName>
        <description>SFDC-2548 Global Alliance</description>
        <formula>Opportunity__r.NonCompete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Select if there is a Non-Compete clause.</inlineHelpText>
        <label>Non-Compete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumApprovalRequested__c</fullName>
        <description>SFDC1-6282: Count InternalApproval__c</description>
        <label># Approvers</label>
        <summaryForeignKey>InternalApproval__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumApprovalsApproved__c</fullName>
        <description>SFDC1-6282: Count InternalApproval__c where status = Approved</description>
        <label># Approvals</label>
        <summaryFilterItems>
            <field>InternalApproval__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>InternalApproval__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumCorporateComplianceApprovalsApproved__c</fullName>
        <description>SFDC1-7774: Count of Internal Approval where status is &quot;Approved&quot; and Type is &quot;Compliance Approvals&quot;</description>
        <inlineHelpText>Total number of Internal Approval where status is &quot;Approved&quot; and Type is &quot;Compliance Approvals&quot;</inlineHelpText>
        <label>#  Corporate Compliance Approvals</label>
        <summaryFilterItems>
            <field>InternalApproval__c.ApprovalType__c</field>
            <operation>equals</operation>
            <value>Corporate Compliance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>InternalApproval__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>InternalApproval__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OpportunityNumber__c</fullName>
        <description>SFDC1-718;Needed on the External Doc and Internal for compliance.Only on Contract Type = Order Form</description>
        <formula>Opportunity__r.Opportunitynum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityRecordType__c</fullName>
        <description>SFDC1-5852 : This field will have the Opportunity RecordType Name on Contract Record.</description>
        <formula>Opportunity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpptyOwnerEmail__c</fullName>
        <description>SFDC1-802 This field is used to store the Related Opportunity Owner&apos;s email Address on Contract</description>
        <label>Oppty Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderFormFormat__c</fullName>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>Order Form Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundled with details</fullName>
                </value>
                <value>
                    <fullName>Unbundled</fullName>
                    <default>true</default>
                    <label>Unbundled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderFormType__c</fullName>
        <description>SFDC1-9562 Hidden field, used to determine when a document should/should not be included in the Order Form DocGen template</description>
        <formula>IF(ISPICKVAL(OrderFormFormat__c, &apos;Bundled with details&apos;), &apos;Bundled&apos;,
   IF(ISPICKVAL(GeneralAgreementType__c, &apos;Other&apos;), &apos;Other&apos;, &apos;Standard&apos;)) + &apos; Order Form&apos;
+ IF(MultiyearOrderForm__c = true, &apos; - Multi Year&apos;, &apos; - Single Year&apos;)
+ IF(Fastrack__c = true, &apos;, Fast Track&apos;, &apos;&apos;)</formula>
        <inlineHelpText>Hidden field, used to determine when a document should/should not be included in the Order Form DocGen template</inlineHelpText>
        <label>Order Form Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderReason__c</fullName>
        <description>SFDC1-718;For Use only on Order Form Contract Types.  Required for SAP Entry.</description>
        <label>Order Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Add-On</fullName>
                </value>
                <value>
                    <fullName>Mid-Term Changes</fullName>
                </value>
                <value>
                    <fullName>Rebates</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Manual Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Manual Renewal</label>
                </value>
                <value>
                    <fullName>Migrated Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Migrated Renewal</label>
                </value>
                <value>
                    <fullName>Syncronizing Subs</fullName>
                    <isActive>false</isActive>
                    <label>Syncronizing Subs</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginalContractEndDate__c</fullName>
        <description>SFDC1-2405 Original Contract End Date</description>
        <formula>OriginalContract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Original Contract End Date</inlineHelpText>
        <label>Original Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginalContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2405 Original Contract</description>
        <inlineHelpText>Original Contract</inlineHelpText>
        <label>Original Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Order Form</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts (Original Contract)</relationshipLabel>
        <relationshipName>OriginalContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginatingContractforAddOn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-10179:When a customer wants to add products to an existing contract, the Rep needs to add a New Business Opportunity.Need a way to link the Order Form for that New Business Oppy to the existing contract.</description>
        <inlineHelpText>Link the Order Form for that New Business Opportunity to the existing contract.</inlineHelpText>
        <label>Originating Contract for Add On</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contract.RecordTypeName__c</field>
                <operation>equals</operation>
                <value>Order Form, Consulting</value>
            </filterItems>
            <filterItems>
                <field>$User.FullName__c</field>
                <operation>equals</operation>
                <value>Batch Admin</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Add On Contracts (to Originating Contract)</relationshipLabel>
        <relationshipName>OriginatingContractsforAddOn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PGIOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-8056 This field holds the user name who updated SAP PGI’d field</description>
        <inlineHelpText>This field holds the user name who updated SAP PGI’d field</inlineHelpText>
        <label>PGI Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKIDContract__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Ctr{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Contract</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>POAttached__c</fullName>
        <description>SFDC1-8559 : PO Attached field for OM on the Contract</description>
        <inlineHelpText>Gives information on whether a user has attached the PO to  Contract.</inlineHelpText>
        <label>PO Attached</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PODate__c</fullName>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PORequiredDS__c</fullName>
        <description>SFDC1-7634 If the PO Required Field (PORequired__c ) on the Contract = True - then Display &quot;Yes&quot; in the field otherwise &quot;No&quot;</description>
        <formula>IF( PORequired__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PO Required for Drawloop</inlineHelpText>
        <label>PORequiredDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PORequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>PO#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerProduct__c</fullName>
        <formula>Opportunity__r.PartnerProduct__c</formula>
        <inlineHelpText>Partner Product/Services</inlineHelpText>
        <label>Partner Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerType__c</fullName>
        <description>SFDC-5485 - Global Alliances - Upgrade (Amendments)</description>
        <formula>TEXT(Account.PartnerType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account partner type</inlineHelpText>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <description>SFDC1-718, only for Contract type = Order Form</description>
        <inlineHelpText>Standard terms are Net 30. Finance Approval Required for non-standard payment terms</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc Credit Line</fullName>
                </value>
                <value>
                    <fullName>CPDA – Ad Hoc Product Design</fullName>
                </value>
                <value>
                    <fullName>Due Now</fullName>
                </value>
                <value>
                    <fullName>Net 30 End of Month</fullName>
                </value>
                <value>
                    <fullName>Net 60 End of Month</fullName>
                </value>
                <value>
                    <fullName>Net 14</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                    <default>true</default>
                    <label>Net 30</label>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 75</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreviousYearTotalSalesPrice__c</fullName>
        <description>SFDC1-1048 New field Previous Year Total Sales Price added to Contracts</description>
        <label>Previous Year Total Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceIncreaseApplied__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Price Increase Applied
SFDC1-9300 : Price Increase Details section field creation/updates</description>
        <inlineHelpText>Whether Price Increase Applied</inlineHelpText>
        <label>Price Increase Applied</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>